removed incorrect xavier init example from notebook 2

--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -150,6 +150,8 @@
     "\n",
     "### Implementation Details\n",
     "\n",
+    "Another addition to this model is that we are not going to learn the embedding for the `<pad>` token. This is because we want to explitictly tell our model that padding tokens are irrelevant to determining the sentiment of a sentence. This means the embedding for the pad token will remain at what it is initialized to (we initialize it to all zeros later). We do this by passing the index of our pad token as the `padding_idx` argument to the `nn.Embedding` layer.\n",
+    "\n",
     "To use an LSTM instead of the standard RNN, we use `nn.LSTM` instead of `nn.RNN`. Also, note that the LSTM returns the `output` and a tuple of the final `hidden` state and the final `cell` state, whereas the standard RNN only returned the `output` and final `hidden` state. \n",
     "\n",
     "As the final hidden state of our LSTM has both a forward and a backward component, which will be concatenated together, the size of the input to the `nn.Linear` layer is twice that of the hidden dimension size.\n",
@@ -170,11 +172,11 @@
     "import torch.nn as nn\n",
     "\n",
     "class RNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, \n",
-    "                 output_dim, n_layers, bidirectional, dropout):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, \n",
+    "                 n_layers, bidirectional, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
     "        self.rnn = nn.LSTM(embedding_dim, hidden_dim, num_layers=n_layers, \n",
     "                           bidirectional=bidirectional, dropout=dropout)\n",
     "        self.fc = nn.Linear(hidden_dim*2, output_dim)\n",
@@ -210,7 +212,9 @@
    "source": [
     "Like before, we'll create an instance of our RNN class, with the new parameters and arguments for the number of layers, bidirectionality and dropout probability.\n",
     "\n",
-    "To ensure the pre-trained vectors can be loaded into the model, the `EMBEDDING_DIM` must be equal to that of the pre-trained GloVe vectors loaded earlier."
+    "To ensure the pre-trained vectors can be loaded into the model, the `EMBEDDING_DIM` must be equal to that of the pre-trained GloVe vectors loaded earlier.\n",
+    "\n",
+    "We get our pad token index from the vocabulary, getting the actual string representing the pad token from the field's `pad_token` attribute, which is `<pad>` by default."
    ]
   },
   {
@@ -226,8 +230,10 @@
     "N_LAYERS = 2\n",
     "BIDIRECTIONAL = True\n",
     "DROPOUT = 0.5\n",
+    "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
     "\n",
-    "model = RNN(INPUT_DIM, EMBEDDING_DIM, HIDDEN_DIM, OUTPUT_DIM, N_LAYERS, BIDIRECTIONAL, DROPOUT)"
+    "model = RNN(INPUT_DIM, EMBEDDING_DIM, HIDDEN_DIM, OUTPUT_DIM, \n",
+    "            N_LAYERS, BIDIRECTIONAL, DROPOUT, PAD_IDX)"
    ]
   },
   {
@@ -324,6 +330,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As our `<unk>` and `<pad>` token aren't in the pre-trained vocabulary they have been initialized using `unk_init` (an $\\mathcal{N}(0,1)$ distribution) when building our vocab. It is preferable to initialize them both to all zeros to explicitly tell our model that, initially, they are irrelevant for determining sentiment. \n",
+    "\n",
+    "We do this by manually setting their row in the embedding weights matrix to zeros. We get their row by finding the index of the tokens, which we have already done for the padding index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+      "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+      "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
+      "        ...,\n",
+      "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
+      "        [ 0.1885, -0.1690,  0.1530,  ..., -0.2077,  0.5473, -0.4517],\n",
+      "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "UNK_IDX = TEXT.vocab.stoi[TEXT.unk_token]\n",
+    "\n",
+    "model.embedding.weight.data[UNK_IDX] = torch.zeros(EMBEDDING_DIM)\n",
+    "model.embedding.weight.data[PAD_IDX] = torch.zeros(EMBEDDING_DIM)\n",
+    "\n",
+    "print(model.embedding.weight.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now see the first two rows of the embedding weights matrix have been set to zeros. As we passed the index of the pad token to the `padding_idx` of the embedding layer it will remain zeros throughout training, however the `<unk>` token embedding will be learned."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train the Model"
    ]
   },
@@ -340,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,28 +556,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 1m 42s\n",
-      "\tTrain Loss: 0.669 | Train Acc: 58.61%\n",
-      "\t Val. Loss: 0.590 |  Val. Acc: 70.80%\n",
-      "Epoch: 02 | Epoch Time: 1m 43s\n",
-      "\tTrain Loss: 0.690 | Train Acc: 52.30%\n",
-      "\t Val. Loss: 0.691 |  Val. Acc: 53.49%\n",
-      "Epoch: 03 | Epoch Time: 1m 44s\n",
-      "\tTrain Loss: 0.682 | Train Acc: 55.89%\n",
-      "\t Val. Loss: 0.656 |  Val. Acc: 62.46%\n",
-      "Epoch: 04 | Epoch Time: 1m 44s\n",
-      "\tTrain Loss: 0.586 | Train Acc: 69.11%\n",
-      "\t Val. Loss: 0.419 |  Val. Acc: 81.29%\n",
-      "Epoch: 05 | Epoch Time: 1m 44s\n",
-      "\tTrain Loss: 0.365 | Train Acc: 84.93%\n",
-      "\t Val. Loss: 0.322 |  Val. Acc: 86.78%\n"
+      "Epoch: 01 | Epoch Time: 1m 39s\n",
+      "\tTrain Loss: 0.685 | Train Acc: 56.16%\n",
+      "\t Val. Loss: 0.685 |  Val. Acc: 50.81%\n",
+      "Epoch: 02 | Epoch Time: 1m 39s\n",
+      "\tTrain Loss: 0.678 | Train Acc: 55.33%\n",
+      "\t Val. Loss: 0.654 |  Val. Acc: 63.16%\n",
+      "Epoch: 03 | Epoch Time: 1m 38s\n",
+      "\tTrain Loss: 0.573 | Train Acc: 70.50%\n",
+      "\t Val. Loss: 0.434 |  Val. Acc: 80.82%\n",
+      "Epoch: 04 | Epoch Time: 1m 39s\n",
+      "\tTrain Loss: 0.439 | Train Acc: 80.81%\n",
+      "\t Val. Loss: 0.392 |  Val. Acc: 83.90%\n",
+      "Epoch: 05 | Epoch Time: 1m 41s\n",
+      "\tTrain Loss: 0.342 | Train Acc: 85.71%\n",
+      "\t Val. Loss: 0.529 |  Val. Acc: 71.46%\n"
      ]
     }
    ],
@@ -565,14 +615,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.327 | Test Acc: 86.65%\n"
+      "Test Loss: 0.405 | Test Acc: 83.06%\n"
      ]
     }
    ],
@@ -605,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,16 +680,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.026062507182359695"
+       "0.0363629013299942"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,16 +707,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9745494723320007"
+       "0.98636394739151"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
