--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'This film', 'is terrible', 'film is']"
+       "['This', 'film', 'is', 'terrible', 'film is', 'is terrible', 'This film']"
       ]
      },
      "execution_count": 2,
@@ -186,10 +186,10 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class FastText(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, output_dim):\n",
+    "    def __init__(self, vocab_size, embedding_dim, output_dim, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
     "        self.fc = nn.Linear(embedding_dim, output_dim)\n",
     "        \n",
     "    def forward(self, text):\n",
@@ -227,8 +227,9 @@
     "INPUT_DIM = len(TEXT.vocab)\n",
     "EMBEDDING_DIM = 100\n",
     "OUTPUT_DIM = 1\n",
+    "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
     "\n",
-    "model = FastText(INPUT_DIM, EMBEDDING_DIM, OUTPUT_DIM)"
+    "model = FastText(INPUT_DIM, EMBEDDING_DIM, OUTPUT_DIM, PAD_IDX)"
    ]
   },
   {
@@ -297,6 +298,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Not forgetting to zero the initial weights of our unknown and padding tokens."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UNK_IDX = TEXT.vocab.stoi[TEXT.unk_token]\n",
+    "\n",
+    "model.embedding.weight.data[UNK_IDX] = torch.zeros(EMBEDDING_DIM)\n",
+    "model.embedding.weight.data[PAD_IDX] = torch.zeros(EMBEDDING_DIM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train the Model"
    ]
   },
@@ -311,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,48 +492,48 @@
    "source": [
     "Finally, we train our model. \n",
     "\n",
-    "This model takes more epochs than the previous model, but the epochs take considerably less time (~20s compared to ~1min 45s), so our overall training time is still shorter."
+    "This model takes more epochs than the previous model, but the epochs take considerably less time, so our overall training time is still shorter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 21s\n",
-      "\tTrain Loss: 0.692 | Train Acc: 52.00%\n",
-      "\t Val. Loss: 0.674 |  Val. Acc: 62.54%\n",
-      "Epoch: 02 | Epoch Time: 0m 22s\n",
-      "\tTrain Loss: 0.684 | Train Acc: 57.78%\n",
-      "\t Val. Loss: 0.646 |  Val. Acc: 68.23%\n",
-      "Epoch: 03 | Epoch Time: 0m 22s\n",
-      "\tTrain Loss: 0.672 | Train Acc: 64.40%\n",
-      "\t Val. Loss: 0.599 |  Val. Acc: 71.41%\n",
-      "Epoch: 04 | Epoch Time: 0m 22s\n",
-      "\tTrain Loss: 0.650 | Train Acc: 70.25%\n",
-      "\t Val. Loss: 0.543 |  Val. Acc: 74.33%\n",
-      "Epoch: 05 | Epoch Time: 0m 22s\n",
-      "\tTrain Loss: 0.620 | Train Acc: 75.06%\n",
-      "\t Val. Loss: 0.496 |  Val. Acc: 76.62%\n",
-      "Epoch: 06 | Epoch Time: 0m 22s\n",
-      "\tTrain Loss: 0.583 | Train Acc: 77.97%\n",
-      "\t Val. Loss: 0.460 |  Val. Acc: 78.66%\n",
-      "Epoch: 07 | Epoch Time: 0m 22s\n",
-      "\tTrain Loss: 0.546 | Train Acc: 81.23%\n",
-      "\t Val. Loss: 0.444 |  Val. Acc: 80.17%\n",
-      "Epoch: 08 | Epoch Time: 0m 21s\n",
-      "\tTrain Loss: 0.507 | Train Acc: 82.98%\n",
-      "\t Val. Loss: 0.418 |  Val. Acc: 82.00%\n",
-      "Epoch: 09 | Epoch Time: 0m 21s\n",
-      "\tTrain Loss: 0.473 | Train Acc: 84.47%\n",
-      "\t Val. Loss: 0.407 |  Val. Acc: 83.38%\n",
-      "Epoch: 10 | Epoch Time: 0m 22s\n",
-      "\tTrain Loss: 0.441 | Train Acc: 86.19%\n",
-      "\t Val. Loss: 0.399 |  Val. Acc: 84.43%\n"
+      "Epoch: 01 | Epoch Time: 0m 8s\n",
+      "\tTrain Loss: 0.687 | Train Acc: 57.26%\n",
+      "\t Val. Loss: 0.639 |  Val. Acc: 71.30%\n",
+      "Epoch: 02 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.652 | Train Acc: 72.59%\n",
+      "\t Val. Loss: 0.516 |  Val. Acc: 75.71%\n",
+      "Epoch: 03 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.581 | Train Acc: 79.36%\n",
+      "\t Val. Loss: 0.436 |  Val. Acc: 79.92%\n",
+      "Epoch: 04 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.503 | Train Acc: 83.88%\n",
+      "\t Val. Loss: 0.400 |  Val. Acc: 83.41%\n",
+      "Epoch: 05 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.437 | Train Acc: 86.86%\n",
+      "\t Val. Loss: 0.392 |  Val. Acc: 85.09%\n",
+      "Epoch: 06 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.384 | Train Acc: 88.69%\n",
+      "\t Val. Loss: 0.400 |  Val. Acc: 85.84%\n",
+      "Epoch: 07 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.345 | Train Acc: 89.80%\n",
+      "\t Val. Loss: 0.420 |  Val. Acc: 86.57%\n",
+      "Epoch: 08 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.312 | Train Acc: 90.67%\n",
+      "\t Val. Loss: 0.437 |  Val. Acc: 87.21%\n",
+      "Epoch: 09 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.286 | Train Acc: 91.39%\n",
+      "\t Val. Loss: 0.458 |  Val. Acc: 87.46%\n",
+      "Epoch: 10 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.263 | Train Acc: 91.99%\n",
+      "\t Val. Loss: 0.474 |  Val. Acc: 87.90%\n"
      ]
     }
    ],
@@ -548,19 +568,19 @@
    "source": [
     "...and get the test accuracy!\n",
     "\n",
-    "The results are comparable to the results in the last notebook, but training takes considerably less time (~3mins for 10 epochs compared to ~9mins for 5)"
+    "The results are comparable to the results in the last notebook, but training takes considerably less time!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.395 | Test Acc: 84.39%\n"
+      "Test Loss: 0.386 | Test Acc: 85.18%\n"
      ]
     }
    ],
@@ -583,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,16 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.3133496540594933e-07"
+       "5.475818625200191e-07"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +664,7 @@
        "1.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
