--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
+    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\")\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -154,10 +154,11 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class CNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, dropout):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
+    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
     "        self.conv_0 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
     "                                kernel_size = (filter_sizes[0], embedding_dim))\n",
     "        self.conv_1 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
@@ -220,10 +221,11 @@
    "outputs": [],
    "source": [
     "class CNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, dropout):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
+    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
     "        self.convs = nn.ModuleList([\n",
     "                                    nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
     "                                              kernel_size = (fs, embedding_dim)) \n",
@@ -279,10 +281,11 @@
    "outputs": [],
    "source": [
     "class CNN1d(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, dropout):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
+    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
     "        self.convs = nn.ModuleList([\n",
     "                                    nn.Conv1d(in_channels = embedding_dim, out_channels = n_filters, \n",
     "                                              kernel_size = fs)\n",
@@ -343,8 +346,10 @@
     "FILTER_SIZES = [3,4,5]\n",
     "OUTPUT_DIM = 1\n",
     "DROPOUT = 0.5\n",
+    "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
     "\n",
-    "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT)"
+    "\n",
+    "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT, PAD_IDX)"
    ]
   },
   {
@@ -380,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And load the pre-trained embeddings"
+    "Next, we'll load the pre-trained embeddings"
    ]
   },
   {
@@ -391,8 +396,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
-       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
+       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
        "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
@@ -415,6 +420,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Then zero the initial weights of the unknown and padding tokens."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UNK_IDX = TEXT.vocab.stoi[TEXT.unk_token]\n",
+    "\n",
+    "model.embedding.weight.data[UNK_IDX] = torch.zeros(EMBEDDING_DIM)\n",
+    "model.embedding.weight.data[PAD_IDX] = torch.zeros(EMBEDDING_DIM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train the Model"
    ]
   },
@@ -427,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -586,21 +610,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 20s\n",
-      "\tTrain Loss: 0.655 | Train Acc: 61.23%\n",
-      "\t Val. Loss: 0.507 |  Val. Acc: 78.22%\n",
-      "Epoch: 02 | Epoch Time: 0m 20s\n",
-      "\tTrain Loss: 0.427 | Train Acc: 80.56%\n",
-      "\t Val. Loss: 0.363 |  Val. Acc: 84.41%\n",
-      "Epoch: 03 | Epoch Time: 0m 20s\n",
-      "\tTrain Loss: 0.304 | Train Acc: 87.10%\n",
-      "\t Val. Loss: 0.351 |  Val. Acc: 84.55%\n",
-      "Epoch: 04 | Epoch Time: 0m 20s\n",
-      "\tTrain Loss: 0.219 | Train Acc: 91.28%\n",
-      "\t Val. Loss: 0.317 |  Val. Acc: 86.89%\n",
-      "Epoch: 05 | Epoch Time: 0m 20s\n",
-      "\tTrain Loss: 0.157 | Train Acc: 94.20%\n",
-      "\t Val. Loss: 0.339 |  Val. Acc: 86.80%\n"
+      "Epoch: 01 | Epoch Time: 0m 12s\n",
+      "\tTrain Loss: 0.494 | Train Acc: 74.95%\n",
+      "\t Val. Loss: 0.363 |  Val. Acc: 84.10%\n",
+      "Epoch: 02 | Epoch Time: 0m 12s\n",
+      "\tTrain Loss: 0.304 | Train Acc: 87.39%\n",
+      "\t Val. Loss: 0.293 |  Val. Acc: 87.87%\n",
+      "Epoch: 03 | Epoch Time: 0m 12s\n",
+      "\tTrain Loss: 0.219 | Train Acc: 91.42%\n",
+      "\t Val. Loss: 0.280 |  Val. Acc: 88.52%\n",
+      "Epoch: 04 | Epoch Time: 0m 12s\n",
+      "\tTrain Loss: 0.147 | Train Acc: 94.60%\n",
+      "\t Val. Loss: 0.284 |  Val. Acc: 89.14%\n",
+      "Epoch: 05 | Epoch Time: 0m 12s\n",
+      "\tTrain Loss: 0.088 | Train Acc: 97.13%\n",
+      "\t Val. Loss: 0.301 |  Val. Acc: 88.96%\n"
      ]
     }
    ],
@@ -638,14 +662,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.338 | Test Acc: 85.35%\n"
+      "Test Loss: 0.282 | Test Acc: 88.12%\n"
      ]
     }
    ],
@@ -670,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,16 +721,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1491514891386032"
+       "0.173546701669693"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,16 +748,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9708710312843323"
+       "0.9093355536460876"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
