--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7fc5dba26bf8>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
+      "defaultdict(<function _default_unk_index at 0x7f41cc314bf8>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
      ]
     }
    ],
@@ -158,7 +158,8 @@
     "import torch.nn.functional as F\n",
     "\n",
     "class CNN(nn.Module):\n",
-    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, dropout):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, \n",
+    "                 filter_sizes, output_dim, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
@@ -222,8 +223,9 @@
     "FILTER_SIZES = [2,3,4]\n",
     "OUTPUT_DIM = len(LABEL.vocab)\n",
     "DROPOUT = 0.5\n",
+    "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
     "\n",
-    "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT)"
+    "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT, PAD_IDX)"
    ]
   },
   {
@@ -292,6 +294,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Then zero the initial weights of the unknown and padding tokens."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UNK_IDX = TEXT.vocab.stoi[TEXT.unk_token]\n",
+    "\n",
+    "model.embedding.weight.data[UNK_IDX] = torch.zeros(EMBEDDING_DIM)\n",
+    "model.embedding.weight.data[PAD_IDX] = torch.zeros(EMBEDDING_DIM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Another different to the previous notebooks is our loss function (aka criterion). Before we used `BCEWithLogitsLoss`, however now we use `CrossEntropyLoss`. Without going into too much detail, `CrossEntropyLoss` performs a *softmax* function over our model outputs and the loss is given by the *cross entropy* between that and the label.\n",
     "\n",
     "Generally:\n",
@@ -301,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -453,20 +474,20 @@
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 1.339 | Train Acc: 46.20%\n",
-      "\t Val. Loss: 0.999 |  Val. Acc: 65.65%\n",
+      "\tTrain Loss: 1.310 | Train Acc: 47.99%\n",
+      "\t Val. Loss: 0.947 |  Val. Acc: 66.81%\n",
       "Epoch: 02 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.882 | Train Acc: 68.22%\n",
-      "\t Val. Loss: 0.805 |  Val. Acc: 72.43%\n",
+      "\tTrain Loss: 0.869 | Train Acc: 69.09%\n",
+      "\t Val. Loss: 0.746 |  Val. Acc: 74.18%\n",
       "Epoch: 03 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.673 | Train Acc: 77.13%\n",
-      "\t Val. Loss: 0.713 |  Val. Acc: 74.02%\n",
+      "\tTrain Loss: 0.665 | Train Acc: 76.94%\n",
+      "\t Val. Loss: 0.627 |  Val. Acc: 78.03%\n",
       "Epoch: 04 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.515 | Train Acc: 83.03%\n",
-      "\t Val. Loss: 0.630 |  Val. Acc: 77.01%\n",
+      "\tTrain Loss: 0.503 | Train Acc: 83.42%\n",
+      "\t Val. Loss: 0.548 |  Val. Acc: 79.73%\n",
       "Epoch: 05 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.387 | Train Acc: 87.70%\n",
-      "\t Val. Loss: 0.624 |  Val. Acc: 76.54%\n"
+      "\tTrain Loss: 0.376 | Train Acc: 87.88%\n",
+      "\t Val. Loss: 0.506 |  Val. Acc: 81.40%\n"
      ]
     }
    ],
@@ -504,14 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.514 | Test Acc: 85.79%\n"
+      "Test Loss: 0.411 | Test Acc: 87.15%\n"
      ]
     }
    ],
@@ -534,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
