mention how using sort key is preferred over sort = False

--- a/A - Using TorchText with Your Own Datasets.ipynb
+++ b/A - Using TorchText with Your Own Datasets.ipynb
@@ -343,7 +343,7 @@
     "\n",
     "By default, the train data is shuffled each epoch, but the validation/test data is sorted. However, TorchText doesn't know what to use to sort our data and it would throw an error if we don't tell it. \n",
     "\n",
-    "There are two ways to handle this, you can either tell the iterator not to sort the validation/test data by passing `sort = False`, or you can tell it how to sort the data by passing a `sort_key`. A sort key is a function that returns a key on which to sort the data on. For example, `lambda x: x.s` will sort the examples by their `s` attribute, i.e their quote.\n",
+    "There are two ways to handle this, you can either tell the iterator not to sort the validation/test data by passing `sort = False`, or you can tell it how to sort the data by passing a `sort_key`. A sort key is a function that returns a key on which to sort the data on. For example, `lambda x: x.s` will sort the examples by their `s` attribute, i.e their quote. Ideally, you want to use a sort key as the `BucketIterator` will then be able to sort your examples and then minimize the amount of padding within each batch.\n",
     "\n",
     "We can then iterate over our iterator to get batches of data. Note how by default TorchText has the batch dimension second."
    ]
