--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -68,7 +68,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\")\n",
+    "MAX_VOCAB_SIZE = 25_000\n",
+    "\n",
+    "TEXT.build_vocab(train_data, max_size=MAX_VOCAB_SIZE, \n",
+    "                 vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
+    "\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -158,7 +162,7 @@
     "                 filter_sizes, output_dim, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
     "        self.conv_0 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
     "                                kernel_size = (filter_sizes[0], embedding_dim))\n",
     "        self.conv_1 = nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
@@ -225,7 +229,7 @@
     "                 filter_sizes, output_dim, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
     "        self.convs = nn.ModuleList([\n",
     "                                    nn.Conv2d(in_channels = 1, out_channels = n_filters, \n",
     "                                              kernel_size = (fs, embedding_dim)) \n",
@@ -285,9 +289,10 @@
     "                 filter_sizes, output_dim, dropout, pad_idx):\n",
     "        super().__init__()\n",
     "        \n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx=pad_idx)\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
     "        self.convs = nn.ModuleList([\n",
-    "                                    nn.Conv1d(in_channels = embedding_dim, out_channels = n_filters, \n",
+    "                                    nn.Conv1d(in_channels = embedding_dim, \n",
+    "                                              out_channels = n_filters, \n",
     "                                              kernel_size = fs)\n",
     "                                    for fs in filter_sizes\n",
     "                                    ])\n",
@@ -396,8 +401,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
+       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
        "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
@@ -611,20 +616,20 @@
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.494 | Train Acc: 74.95%\n",
-      "\t Val. Loss: 0.363 |  Val. Acc: 84.10%\n",
-      "Epoch: 02 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.304 | Train Acc: 87.39%\n",
-      "\t Val. Loss: 0.293 |  Val. Acc: 87.87%\n",
+      "\tTrain Loss: 0.644 | Train Acc: 62.23%\n",
+      "\t Val. Loss: 0.487 |  Val. Acc: 78.46%\n",
+      "Epoch: 02 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.419 | Train Acc: 80.98%\n",
+      "\t Val. Loss: 0.360 |  Val. Acc: 84.72%\n",
       "Epoch: 03 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.219 | Train Acc: 91.42%\n",
-      "\t Val. Loss: 0.280 |  Val. Acc: 88.52%\n",
-      "Epoch: 04 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.147 | Train Acc: 94.60%\n",
-      "\t Val. Loss: 0.284 |  Val. Acc: 89.14%\n",
-      "Epoch: 05 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.088 | Train Acc: 97.13%\n",
-      "\t Val. Loss: 0.301 |  Val. Acc: 88.96%\n"
+      "\tTrain Loss: 0.302 | Train Acc: 87.17%\n",
+      "\t Val. Loss: 0.345 |  Val. Acc: 85.25%\n",
+      "Epoch: 04 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.218 | Train Acc: 91.27%\n",
+      "\t Val. Loss: 0.318 |  Val. Acc: 87.04%\n",
+      "Epoch: 05 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.155 | Train Acc: 94.35%\n",
+      "\t Val. Loss: 0.339 |  Val. Acc: 86.56%\n"
      ]
     }
    ],
@@ -669,7 +674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.282 | Test Acc: 88.12%\n"
+      "Test Loss: 0.339 | Test Acc: 85.28%\n"
      ]
     }
    ],
@@ -727,7 +732,7 @@
     {
      "data": {
       "text/plain": [
-       "0.173546701669693"
+       "0.1023554727435112"
       ]
      },
      "execution_count": 19,
@@ -754,7 +759,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9093355536460876"
+       "0.9818674325942993"
       ]
      },
      "execution_count": 20,
